<resources>
    <string name="app_name">Storywell</string>
    <string name="title_activity_story_list_view">Your Storybooks</string>
    <string name="title_activity_page_view">Reading a Storybook</string>
    <string name="title_activity_story_view">Reading a Storybook</string>
    <string name="title_activity_reflection_view">Your Answers</string>
    <string name="title_activity_adventure_view">Story Adventures</string>
    <string name="title_activity_resolution_view">Storywell Challenge</string>
    <string name="title_activity_debug">Debug Activity</string>
    <string name="title_activity_about">About Storywell</string>
    <string name="title_activity_settings">Settings</string>
    <string name="title_activity_fitness_sync">Fitness Data Download</string>
    <string name="title_activity_discover_trackers">Discover Bands</string>
    <string name="title_activity_pairing_tracker">Pairing Bands</string>
    <string name="title_activity_login">Enter Storywell</string>
    <string name="title_stories">Storybooks</string>
    <string name="title_activities">Adventures</string>
    <string name="title_treasures">Treasures</string>
    <string name="title_storymap">Our Stories</string>
    <string name="equal_to">=\u00A0</string>
    <string name="empty"></string>
    <string name="tooltip_storycontent_navigation">Swipe to see the next pages</string>
    <string name="thumbnail">Thumbnail</string>
    <string name="title_activity_discover_trackers_caregiver">Getting a band for the adult</string>
    <string name="title_activity_discover_trackers_child">Getting a band for the child</string>
    <string name="title_activity_discover_trackers_generic">Pairing a band</string>
    <string name="title_activity_pair_tracker_caregiver">Pairing the adult\'s band</string>
    <string name="title_activity_pair_tracker_child">Pairing child\'s band</string>
    <string name="title_activity_pair_tracker_generic">Pairing a band</string>
    <string name="bluetooth_scan_start">Scan</string>
    <string name="bluetooth_scan_stop">Stop</string>
    <string name="bluetooth_send_initial_pairing_title">Pairing your fitness tracker&#8230;</string>
    <string name="bluetooth_connecting">Connecting to \nyour fitness tracker&#8230;\n\n\nThis will take several seconds.</string>
    <string name="bluetooth_send_initial_pairing">We just send a vibration to your fitness tracker. \n\nTap on the fitness tracker\'s button if it was the right one.</string>
    <string name="bluetooth_send_initial_pairing_alt">If your band does not vibrate, press the back button.</string>
    <string name="bluetooth_auth_successful">Setting up your fitness tracker.</string>
    <string name="bluetooth_pairing_successful">The band has been successfully paired! \n\nTap on the Save button to complete pairing.</string>
    <string name="bluetooth_send_initial_ok">Ok</string>
    <string name="bluetooth_save">Save</string>
    <string name="bluetooth_cancel">Cancel</string>
    <string name="user_setting_bluetooth_info">%1$s (Battery %2$d%%)</string>
    <string name="user_setting_no_bluetooth_info"> </string>
    <string name="pref_user_group_caregiver">Caregiver\'s information</string>
    <string name="pref_user_group_child">Child\'s information</string>
    <string name="pref_user_summary_hidden">Hidden</string>
    <string name="pref_user_summary_not_set">Not set</string>
    <string name="pref_user_caregiver_nickname">Caregiver\'s nickname</string>
    <string name="pref_user_child_nickname">Child\'s nickname</string>
    <string name="pref_user_birth_year">Year of Birth</string>
    <string name="pref_user_birth_year_dialog">Pick the year of birth</string>
    <string name="pref_user_weight">Weight</string>
    <string name="pref_user_weight_dialog">Enter weight in lbs</string>
    <string name="pref_user_height">Height</string>
    <string name="pref_user_height_dialog">Pick height in feet and inches</string>
    <string name="pref_user_group_trackers">Activity trackers</string>
    <string name="pref_user_fitness_bands_setup">Fitness Bands Setting</string>
    <string name="pref_user_advanced_setup">Advanced Settings</string>
    <string name="pref_user_bluetooth_setup">Set up trackers</string>
    <string name="pref_user_bluetooth_caregiver">Adult\'s Band</string>
    <string name="pref_user_bluetooth_child">Child\'s Band</string>
    <string name="pref_user_bluetooth_not_connected">No paired band</string>
    <string name="pref_choose_hero_title">Choose your hero</string>
    <string name="pref_choose_hero_msg">Your hero will appear on the adventure screen</string>
    <string name="pref_choose_hero_button">Save my choice</string>
    <string name="pref_hero_00">Mira</string>
    <string name="pref_hero_01">Diego</string>
    <string name="splash_text_01">Let\'s take a deep breath</string>
    <string name="splash_download_stories">Arranging your storybooks</string>
    <string name="splash_download_group">Preparing your family game</string>
    <string name="splash_download_challenges">Downloading your adventures</string>
    <string name="splash_error_bluetooth_permission">Storywell can\'t continue without Bluetooth access.</string>
    <string name="splash_error_bluetooth_permission_try_again">Try again</string>
    <string name="firstrun_button_next">Next</string>
    <string name="firstrun_button_audio_permission">Allow recording</string>
    <string name="firstrun_bluetooth_permission_button">Allow location sharing</string>
    <string name="firstrun_button_finish">Read books</string>
    <string name="error_cant_connect_to_internet">Can\'t connect to the Internet</string>
    <string name="error_json_error">Something is wrong with Northeastern\'s database</string>
    <string name="error_bad_request">Something is wrong with Northeastern\'s server</string>
    <string name="error_firebase_db">Something is wrong with Story server</string>
    <string name="button_try_again">Try again</string>
    <string name="firstrun_appinfo">With this app you can read storybooks together with your
        children and be healthy as a family! \n\nSwipe left to learn more.</string>
    <string name="firstrun_appdetail">The more active you and your child are, the further your hero will fly, and the more books you can read! \n\nSwipe to continue.</string>
    <string name="firstrun_audio_permission">You can also record your own stories in this app. \n\n
        Press the button below to allow Storywell to record audio. </string>
    <string name="firstrun_bluetooth_permission">Storywell gets your fitness data using a Bluetooth connection with your fitness wristband. \n\n
        Press the button below to allow location sharing so that Storywell can use your Bluetooth. </string>
    <string name="firstrun_googleplay">Also, you need Google Play Extension. Press next to set if
        you have it on your phone. </string>
    <string name="firstrun_finish">And you are all set!\n\nPress the button below to read your storybooks. </string>
    <string name="firstrun_snackbar_mustsetaudio">Audio Permission needed to continue using Storywell.</string>
    <string name="firstrun_snackbar_mustsetbluetooth">Storywell can\'t continue without Bluetooth access.</string>
    <string name="firstrun_snackbar_tryagain">Try Again</string>
    <string name="firstrun_ble_not_supported">This app requires Bluetooth Low-Energy feature</string>
    <string name="notification_default_channel_id">Regular Reminders</string>
    <string name="notification_default_channel_name">Regular Reminders</string>
    <string name="notification_default_channel_desc">Information about family fitness, storytelling, and Storywell.</string>
    <string name="notification_announcements_channel_id">Announcements</string>
    <string name="notification_announcements_channel_name">Announcements</string>
    <string name="notification_announcements_channel_desc">Updates about the Storywell app.</string>
    <string name="notification_updates_channel_id">Updates</string>
    <string name="notification_updates_channel_name">Updates</string>
    <string name="notification_updates_channel_desc">Updates interactions in the Storywell app.</string>
    <string name="notification_battery_low_title">Low battery</string>
    <string name="notification_person_battery_low">Charge %s\'s fitness band for 1 hour.</string>
    <string name="notification_people_battery_low">Charge %s and %s\'s fitness bands for 1 hour.</string>
    <string name="story_list_item_text">Storybook item</string>
    <string name="story_view_cover_locked">This book is locked for now. Complete fitness challenges to unlock more books.</string>
    <string name="story_view_cover_navigation_tip">Swipe left to see the next page. Make sure you find the secret envelope!</string>
    <string name="reflection_start_title">You found a secret envelope!</string>
    <string name="reflection_start_subtitle">Tap on the envelope to\nsee what\'s inside!</string>
    <string name="reflection_text">Reflection question</string>
    <string name="reflection_subtext">Explanation</string>
    <string name="reflection_title">Can you answer this question?</string>
    <string name="reflection_delete_confirmation_title">Delete Answer?</string>
    <string name="reflection_delete_confirmation_desc">This will remove your answer and you will be asked to record an answer again.</string>
    <string name="reflection_button_answer">Answer</string>
    <string name="reflection_label_answer">Tap once on the record button to answer</string>
    <string name="reflection_label_record">Recording your answer...</string>
    <string name="reflection_button_answer_again">Answer Again</string>
    <string name="reflection_button_delete">Delete</string>
    <string name="reflection_button_stop">Stop</string>
    <string name="reflection_button_next">Next</string>
    <string name="reflection_label_next">Slide left to see the next page</string>
    <string name="reflection_button_replay">Replay</string>
    <string name="reflection_button_play">Play</string>
    <string name="reflection_label_play">Play answer</string>
    <string name="reflection_label_playing">Playing your answer...</string>
    <string name="resolution_intro_text_1">It\'s okay if you didn\'t complete the challenge.</string>
    <string name="resolution_intro_text_2">To continue reading the stories, you can spin a magic needle to get one of these balloons.</string>
    <string name="resolution_balloon_pass_info">Super Cloud Balloon: You can immediately read the next story without having to do anything else. This balloon doesn\'t show up very often.</string>
    <string name="resolution_balloon_regular_info">Blue Balloon: With this balloon you will need to complete a family fitness challenge.</string>
    <string name="resolution_balloon_geostory_info">Story Balloon: Listen to a story from another family and you can immediately read the next story.</string>
    <string name="resolution_balloon_idea_info">Idea Balloon: Pick a balloon that gives you an idea to meet your fitness challenge.</string>
    <string name="statement_text">Thinking about the fun things that happen during physical activity can make it more enjoyable!</string>
    <string name="statement_instruction">Swipe left to continue reading your story.</string>
    <string name="mood_picker_child_prompt">This is for the child.\nHow do you feel right now?</string>
    <string name="geostory_resolution_info">Listen to a story to unlock your storybook.</string>
    <string name="geostory_resolution_completed">You can unlock your story now.</string>
    <string name="geostory_resolution_unlock">Unlock</string>
    <string name="child_mood_happy">Happy</string>
    <string name="child_mood_sad">Sad</string>
    <string name="child_mood_laugh">Laugh</string>
    <string name="child_mood_angry">Angry</string>
    <string name="statement_button_next">Next</string>
</resources>