<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/storyCover"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:theme="@style/AppTheme.StoryView">

    <TextView
        android:id="@+id/mood_picker_instruction"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:fontFamily="@font/storywell_handwriting"
        android:text="@string/mood_picker_child_prompt"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="24sp"
        android:textAlignment="center"
        android:layout_margin="16dp"
        app:layout_constraintTop_toTopOf="parent" />


    <GridLayout
        android:id="@+id/child_mood_picker_button_group"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:columnCount="2"
        app:layout_constraintBottom_toTopOf="@+id/responding_control_area"
        app:layout_constraintTop_toBottomOf="@+id/mood_picker_instruction"
        tools:layout_editor_absoluteX="16dp">

        <ToggleButton
            android:id="@+id/child_sad"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_columnWeight="0.5"
            android:layout_margin="4dp"
            android:background="@drawable/toggle_button_moods"
            android:drawableTop="@drawable/ic_twemoji_sad"
            android:fontFamily="@font/storywell_handwriting"
            android:textOff="@string/child_mood_sad"
            android:textOn="@string/child_mood_sad"
            android:textSize="24sp" />

        <ToggleButton
            android:id="@+id/child_happy"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_columnWeight="0.5"
            android:layout_margin="4dp"
            android:background="@drawable/toggle_button_moods"
            android:drawableTop="@drawable/ic_twemoji_happy"
            android:fontFamily="@font/storywell_handwriting"
            android:textOff="@string/child_mood_happy"
            android:textOn="@string/child_mood_happy"
            android:textSize="24sp" />

        <ToggleButton
            android:id="@+id/child_angry"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_columnWeight="0.5"
            android:layout_margin="4dp"
            android:background="@drawable/toggle_button_moods"
            android:drawableTop="@drawable/ic_twemoji_angry"
            android:fontFamily="@font/storywell_handwriting"
            android:textOff="@string/child_mood_angry"
            android:textOn="@string/child_mood_angry"
            android:textSize="24sp" />

        <ToggleButton
            android:id="@+id/child_laugh"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_columnWeight="0.5"
            android:layout_margin="4dp"
            android:background="@drawable/toggle_button_moods"
            android:drawableTop="@drawable/ic_twemoji_laugh"
            android:fontFamily="@font/storywell_handwriting"
            android:textOff="@string/child_mood_laugh"
            android:textOn="@string/child_mood_laugh"
            android:textSize="24sp" />

    </GridLayout>

    <android.support.constraint.ConstraintLayout
        android:id="@+id/responding_control_area"
        android:layout_width="match_parent"
        android:layout_height="@dimen/actionbar_size"
        android:background="@color/colorPrimary"
        android:elevation="10dp"
        android:gravity="center_horizontal|bottom"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent">

        <ImageButton
            android:id="@+id/button_send_child_moods"
            android:layout_width="@dimen/actionbar_button_size"
            android:layout_height="@dimen/actionbar_button_size"
            android:layout_margin="14dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:background="@drawable/round_button_hot"
            android:contentDescription="Send moods"
            android:elevation="10dp"
            android:src="@drawable/ic_add_48px"
            android:tint="@color/colorPrimaryDark"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/text_respond"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:fontFamily="@font/storywell_handwriting"
            android:text="Record mood"
            android:textColor="@color/white"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/button_send_child_moods" />


    </android.support.constraint.ConstraintLayout>

</android.support.constraint.ConstraintLayout>