<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/intro_heading_1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:fontFamily="@font/storywell_handwriting"
        android:text="@string/resolution_intro_text_1"
        android:textAlignment="center"
        android:textColor="@color/colorPrimary"
        android:textSize="28sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/intro_heading_2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:fontFamily="@font/storywell_handwriting"
        android:text="@string/resolution_intro_text_2"
        android:textAlignment="center"
        android:textColor="@color/colorPrimary"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/intro_heading_1" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="@dimen/resolution_margin"
        android:layout_marginEnd="16dp"
        app:layout_constraintBottom_toTopOf="@id/resolution_next_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/intro_heading_2">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/item_balloon_pass"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingTop="@dimen/resolution_icon_margin">

                <ImageView
                    android:layout_width="@dimen/roulette_balloon_size"
                    android:layout_height="@dimen/roulette_balloon_size"
                    android:layout_marginEnd="@dimen/resolution_icon_margin"
                    android:src="@drawable/art_roulette_baloon_pass" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/storywell_handwriting"
                    android:text="@string/resolution_balloon_pass_info"
                    android:textAlignment="viewStart"
                    android:textColor="@color/black_semi"
                    android:textSize="18sp" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/item_balloon_geostory"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingTop="@dimen/resolution_icon_margin">

                <ImageView
                    android:layout_width="@dimen/roulette_balloon_size"
                    android:layout_height="@dimen/roulette_balloon_size"
                    android:layout_marginEnd="@dimen/resolution_icon_margin"
                    android:src="@drawable/art_roulette_baloon_geostory" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/storywell_handwriting"
                    android:text="@string/resolution_balloon_geostory_info"
                    android:textAlignment="viewStart"
                    android:textColor="@color/black_semi"
                    android:textSize="18sp" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/item_balloon_answer"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingTop="@dimen/resolution_icon_margin">

                <ImageView
                    android:layout_width="@dimen/roulette_balloon_size"
                    android:layout_height="@dimen/roulette_balloon_size"
                    android:layout_marginEnd="@dimen/resolution_icon_margin"
                    android:src="@drawable/art_roulette_baloon_idea" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/storywell_handwriting"
                    android:text="@string/resolution_balloon_idea_info"
                    android:textAlignment="viewStart"
                    android:textColor="@color/black_semi"
                    android:textSize="18sp" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/item_balloon_regular"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingTop="@dimen/resolution_icon_margin">

                <ImageView
                    android:layout_width="@dimen/roulette_balloon_size"
                    android:layout_height="@dimen/roulette_balloon_size"
                    android:layout_marginEnd="@dimen/resolution_icon_margin"
                    android:src="@drawable/art_roulette_baloon_generic" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/storywell_handwriting"
                    android:text="@string/resolution_balloon_regular_info"
                    android:textAlignment="viewStart"
                    android:textColor="@color/black_semi"
                    android:textSize="18sp" />

            </LinearLayout>

        </LinearLayout>


    </ScrollView>

    <Button
        android:id="@+id/resolution_next_button"
        style="@style/AppTheme.ActionButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:background="@drawable/rounded_primary_button"
        android:fontFamily="@font/storywell_handwriting"
        android:text="Next"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />



</androidx.constraintlayout.widget.ConstraintLayout>