<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="top"
    android:elevation="0dp"
    android:outlineProvider="bounds"
    tools:context=".GeoStoryFragment">

    <!--<include layout="@layout/layout_geostory_map" />-->
    <LinearLayout
        android:id="@+id/geostory_bottom_info_bar"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:paddingTop="8dp"
        android:paddingStart="16dp"
        android:paddingBottom="12dp"
        android:paddingEnd="16dp"
        android:elevation="4dp"
        android:layout_gravity="bottom"
        android:visibility="invisible"
        android:background="@color/colorPrimaryOverlay"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/geostory_bottom_info_text"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center_horizontal|center_vertical"
            android:textColor="@color/white"
            android:textSize="16sp"
            android:fontFamily="@font/storywell_handwriting"
            android:text="@string/geostory_resolution_info" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/geostory_top_action_bar"
        android:layout_width="match_parent"
        android:layout_height="64dp"
        android:paddingTop="8dp"
        android:paddingStart="16dp"
        android:paddingBottom="12dp"
        android:paddingEnd="4dp"
        android:elevation="4dp"
        android:visibility="gone"
        android:background="@color/colorPrimaryOverlay"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/geostory_top_action_text"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="start|center_vertical"
            android:textColor="@color/white"
            android:textSize="16sp"
            android:fontFamily="@font/storywell_handwriting"
            android:text="@string/geostory_resolution_completed" />

        <Button
            android:id="@+id/button_unlock_story"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:textColor="@color/colorSecondaryLight"
            android:text="@string/geostory_resolution_unlock"
            android:fontFamily="@font/storywell_handwriting" />

    </LinearLayout>

    <fragment
        android:name="com.google.android.gms.maps.SupportMapFragment"
        android:id="@+id/map"
        android:elevation="0dp"
        android:layout_width="match_parent"
        android:layout_height="match_parent"/>

    <include
        android:id="@+id/storymap_viewer_sheet"
        layout="@layout/layout_geostory_viewer" />

</android.support.design.widget.CoordinatorLayout>